[tool.poetry]
name = "gloomy"
version = "0.1.0"
description = ""
authors = ["Šimon Líman <vrt2@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
django-admin = "^2.0.1"
django-environ = "^0.9.0"
pydantic = "^1.10.2"
psycopg2 = "^2.9.5"
django-htmx = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
